--- a/GrafDemo/PathWindowController.xib
+++ b/GrafDemo/PathWindowController.xib
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8121.20" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12106.1" systemVersion="16C67" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8121.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12106.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="BNRPathWindowController">
+        <customObject id="-2" userLabel="File's Owner" customClass="PathWindowController" customModule="GrafDemo" customModuleProvider="target">
             <connections>
                 <outlet property="pathSamplerView" destination="8iV-jK-lCP" id="fOO-4X-bnZ"/>
                 <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
@@ -33,8 +33,24 @@
                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="8iV-jK-lCP" customClass="PathSamplerView" customModule="GrafDemo" customModuleProvider="target">
                         <rect key="frame" x="159" y="20" width="559" height="416"/>
                     </customView>
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="iB8-RF-F7p">
+                        <rect key="frame" x="14" y="270" width="107" height="32"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="Owh-UV-pYP"/>
+                            <constraint firstAttribute="width" constant="95" id="oAX-sK-em1"/>
+                        </constraints>
+                        <buttonCell key="cell" type="push" title="Dump Path" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="byZ-X6-sN6">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="dumpPath:" target="-2" id="4VL-Vy-JIZ"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="iB8-RF-F7p" firstAttribute="top" secondItem="Zby-BA-ARF" secondAttribute="bottom" constant="9" id="5hf-0F-Fb1"/>
+                    <constraint firstItem="iB8-RF-F7p" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="20" id="HyE-Wy-mk2"/>
                     <constraint firstItem="8iV-jK-lCP" firstAttribute="leading" secondItem="Zby-BA-ARF" secondAttribute="trailing" constant="8" id="Nhe-tI-ZO3"/>
                     <constraint firstAttribute="trailing" secondItem="8iV-jK-lCP" secondAttribute="trailing" constant="20" id="Q4m-KA-7eX"/>
                     <constraint firstItem="Zby-BA-ARF" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" constant="20" id="Y9D-hX-f84"/>
